--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "expo": "~54.0.20",
     "expo-status-bar": "~3.0.8",
+    "native-base": "^3.4.28",
+    "normalize-css-color": "^1.0.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-svg": "^15.14.0",
     "react-native-web": "^0.21.0"
   },
   "private": true
